# Bom-Mecanico

./: CMakeLists.txt  README.md
Bom-Mecanico/: CMakeLists.txt  README.md
Bom-Mecanico/src/: main.cpp
Bom-Mecanico/tests/: CMakeLists.txt  test_quiz_engine.cpp
docs/: diagram.drawio
include/: Question.hpp
src/: CMakeLists.txt  Question.cpp
tests/: CMakeLists.txt  test_question.cpp
